# graphql-schema-integration-for-actix-web

./: Cargo.toml  README.md  post_schema.graphql
src/: handlers.rs  main.rs  schema.rs
