[package]
name = "graphql-schema-integration-for-actix-web"
version = "0.1.0"
authors = ["Dmitri Mamrukov <dmitri.mamrukov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
actix-http = "1.0.1"
env_logger = "0.7.1"
lazy_static = "1.4.0"
juniper = "0.14.2"
serde = "1.0.105"
serde_json = "1.0.48"
serde_derive = "1.0.105"
juniper-from-schema = "0.5.2"
